# DetectionCostmaps

./: .gitignore  README.md
navigation2_dynamic/kf_hungarian_tracker/config/: kf_hungarian.yaml  kf_hungarian2.yaml
navigation2_dynamic/kf_hungarian_tracker/kf_hungarian_tracker/: kf_hungarian_node.py  obstacle_class.py
navigation2_dynamic/kf_hungarian_tracker/launch/: kf_hungarian.launch.py
navigation2_dynamic/nav2_dynamic_msgs/msg/: Mask.msg  MaskArray.msg
rules_bringup/launch/: costmap_rules.launch.py  detection_to_obstacle.launch.py
semantic_rules/: CMakeLists.txt  package.xml  semantic_layer.xml  setup.py
semantic_rules/detection_converter/: detection_converter_node.py  rule_assigner_node.py
semantic_rules/include/semantic_costmap/: semantic_layer.hpp
semantic_rules/launch/: tracker_converter_rules.launch.py
semantic_rules/plugins/: semantic_layer.cpp
semantic_rules/semantic_rules/: circular_time_buffer.py  detection_costmap_rule.py
src/costmap_rules/: package.xml  setup.py
src/costmap_rules/costmap_rules/: costmap_rule.py
src/navigation2_dynamic/kf_hungarian_tracker/: setup.cfg
src/navigation2_dynamic/kf_hungarian_tracker/kf_hungarian_tracker/: kf_hungarian_node.py
src/navigation2_dynamic/kf_hungarian_tracker/launch/: kf_hungarian.launch.py
src/navigation2_dynamic/nav2_dynamic_msgs/msg/: Obstacle.msg
src/rules_bringup/: CMakeLists.txt  package.xml
src/semantic_rules/: setup.cfg  setup.py
src/semantic_rules/detection_converter/: detection_converter_node.py
src/semantic_rules/launch/: tracker_converter_rules.launch.py
src/semantic_rules/semantic_rules/: detection_costmap_rule.py
src/yolov8_ros/docs/: origin.txt
src/yolov8_ros/yolov8_bringup/launch/: yolov8.launch.py  yolov8_3d.launch.py
yolov8_ros/yolov8_bringup/launch/: yolov8_3d.launch.py
yolov8_ros/yolov8_ros/yolov8_ros/: detect_3d_node.py  yolov8_node.py
