<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>semantic_rules</name>
  <version>1.0.0</version>
  <description>Enables describing rules for handling different semantic objects </description>
  <maintainer email="lightprohvet@gmail.com">Mihkel Marten Rüütli</maintainer>
  <license>Apache-2.0</license>

  <depend>rclpy</depend>
  <depend>yolov8_ros</depend>
  <depend>yolov8_msgs</depend>
  <depend>nav2_dynamic_msgs</depend>
  <depend>kf_hungarian_tracker</depend>

  <test_depend>ament_copyright</test_depend>
  <test_depend>ament_flake8</test_depend>
  <test_depend>ament_pep257</test_depend>
  <test_depend>python3-pytest</test_depend>

  <export>
    <build_type>ament_python</build_type>
    <costmap_2d plugin="${prefix}/semantic_layer.xml"/>
  </export>
</package>
